--- a/source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
+++ b/source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
@@ -35,7 +35,8 @@
             <ProgressBar
                 android:id="@+id/loadingPictograms"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:visibility="invisible" />
 
         </LinearLayout>
         
