--- a/source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
+++ b/source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
@@ -40,12 +40,12 @@
 
         </LinearLayout>
         
-        <ListView
-        android:id="@+id/listView1"
+        <GridView
+        android:id="@+id/checkout"
         android:layout_width="match_parent"	
         android:layout_height="fill_parent"
         android:background="@drawable/sentenceboardlayout" >
-    </ListView>
+    </GridView>
        
     </LinearLayout>
     
@@ -194,7 +194,8 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:text="@string/kategori" />
+            android:text="Test Klim"
+            android:onClick="klimTestMethod" />
         </LinearLayout>
         
 		<LinearLayout
