--- a/source/workspace/PictoAdmin/res/menu/activity_admin_category.xml
+++ b/source/workspace/PictoAdmin/res/menu/activity_admin_category.xml
@@ -5,7 +5,7 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="Tilbage"
-        android:onClick="returnToLastActivity">
+        android:onClick="returnToCaller">
         </item>
 
 </menu>
