--- a/source/workspace/PARROT/res/layout/speechboard_layout.xml
+++ b/source/workspace/PARROT/res/layout/speechboard_layout.xml
@@ -50,15 +50,15 @@
 
 	<GridView
 	    android:id="@+id/sentenceboard"
-	    android:layout_width="wrap_content"
+	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
+	    android:columnWidth="205dp"
 	    android:numColumns="7"
-	    android:gravity="center"
-	    android:stretchMode="columnWidth"
+	    android:stretchMode="none"
    	    android:horizontalSpacing="5dp"
 	    android:verticalSpacing="5dp" >
 	</GridView>
 
-
+<!-- android:stretchMode="spacingWidthUniform" -->
 
 </LinearLayout>
