--- a/source/workspace/PictoAdmin/res/layout/activity_admin_category.xml
+++ b/source/workspace/PictoAdmin/res/layout/activity_admin_category.xml
@@ -39,7 +39,7 @@
         <LinearLayout
             android:id="@+id/category_columb"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:layout_marginRight="5dp"
             android:orientation="vertical" >
@@ -56,21 +56,23 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right" >
+                android:gravity="center" >
 
                 <ImageButton
                     android:id="@+id/add_new_category_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_new"
-                    android:contentDescription="@string/picture" />
+                    android:contentDescription="@string/picture"
+                    android:onClick="createCategory" />
 
                 <ImageButton
                     android:id="@+id/delete_selected_category_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_discard"
-                    android:contentDescription="@string/picture" />
+                    android:contentDescription="@string/picture"
+                    android:onClick="deleteCategory" />
 
             </LinearLayout>
 
@@ -78,15 +80,16 @@
                 android:id="@+id/category_gridview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:numColumns="1"
-                android:background="@drawable/sentenceboardlayout" >
+                android:background="@drawable/sentenceboardlayout"
+                android:numColumns="1" >
+
             </GridView>
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/subcategory_coloumb"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:layout_marginRight="5dp"
             android:orientation="vertical" >
@@ -103,21 +106,23 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right" >
+                android:gravity="center" >
 
                 <ImageButton
                     android:id="@+id/add_new_subcategory_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_new"
-                    android:contentDescription="@string/picture" />
+                    android:contentDescription="@string/picture"
+                    android:onClick="createSubCategory" />
 
                 <ImageButton
                     android:id="@+id/delete_selected_subcategory_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_discard"
-                    android:contentDescription="@string/picture" />
+                    android:contentDescription="@string/picture"
+                    android:onClick="deleteSubCategory" />
 
             </LinearLayout>
 
@@ -125,8 +130,10 @@
                 android:id="@+id/subcategory_gridview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:numColumns="1"
-                android:background="@drawable/sentenceboardlayout" >
+                android:background="@drawable/sentenceboardlayout"
+                android:gravity="center"
+                android:numColumns="1" >
+
             </GridView>
         </LinearLayout>
 
@@ -148,14 +155,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right" >
+                android:gravity="center" >
 
                 <ImageButton
                     android:id="@+id/access_pictocreator_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/device_access_camera"
-                    android:contentDescription="@string/picture" />
+                    android:contentDescription="@string/picture"
+                    android:onClick="gotoPictoCreator" />
 
                 <ImageButton
                     android:id="@+id/add_new_picture_button"
@@ -186,7 +194,7 @@
     <LinearLayout
         android:id="@+id/tip_error_bar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:gravity="center" >
 
         <TextView
@@ -201,7 +209,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/action_about"
-            android:contentDescription="@string/picture" />
+            android:contentDescription="@string/picture"
+            android:visibility="gone" />
 
     </LinearLayout>
 
