--- a/source/workspace/PictoAdmin/res/layout/activity_admin_category.xml
+++ b/source/workspace/PictoAdmin/res/layout/activity_admin_category.xml
@@ -72,6 +72,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_discard"
                     android:contentDescription="@string/picture"
+                    android:clickable="false"
                     android:onClick="deleteCategory" />
 
             </LinearLayout>
@@ -80,6 +81,7 @@
                 android:id="@+id/category_gridview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:background="@drawable/sentenceboardlayout"
                 android:numColumns="1" >
 
@@ -114,6 +116,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_new"
                     android:contentDescription="@string/picture"
+                    android:clickable="false"
                     android:onClick="createSubCategory" />
 
                 <ImageButton
@@ -122,6 +125,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_discard"
                     android:contentDescription="@string/picture"
+                    android:clickable="false"
                     android:onClick="deleteSubCategory" />
 
             </LinearLayout>
@@ -163,6 +167,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/device_access_camera"
                     android:contentDescription="@string/picture"
+                    android:clickable="false"
                     android:onClick="gotoPictoCreator" />
 
                 <ImageButton
@@ -170,14 +175,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_new_picture"
-                    android:contentDescription="@string/picture" />
+                    android:contentDescription="@string/picture"
+                    android:clickable="false" />
 
                 <ImageButton
                     android:id="@+id/delete_selected_picture_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_discard"
-                    android:contentDescription="@string/picture" />
+                    android:contentDescription="@string/picture"
+                    android:clickable="false" />
 
             </LinearLayout>
 
