Made some nice changes

--- a/source/workspace/PictoAdmin/res/layout/activity_admin_category.xml
+++ b/source/workspace/PictoAdmin/res/layout/activity_admin_category.xml
@@ -72,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_discard"
                     android:contentDescription="@string/picture"
-                    android:clickable="false"
+                    android:visibility="gone"
                     android:onClick="deleteCategory" />
 
             </LinearLayout>
@@ -83,7 +83,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:background="@drawable/sentenceboardlayout"
-                android:numColumns="1" >
+                android:numColumns="1"
+                android:listSelector="@drawable/sentenceboardlayout" >
 
             </GridView>
         </LinearLayout>
@@ -114,30 +115,29 @@
                     android:id="@+id/add_new_subcategory_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/content_new"
                     android:contentDescription="@string/picture"
-                    android:clickable="false"
-                    android:onClick="createSubCategory" />
+                    android:onClick="createSubCategory"
+                    android:src="@drawable/content_new"
+                    android:visibility="gone" />
 
                 <ImageButton
                     android:id="@+id/delete_selected_subcategory_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/content_discard"
                     android:contentDescription="@string/picture"
-                    android:clickable="false"
-                    android:onClick="deleteSubCategory" />
-
+                    android:onClick="deleteSubCategory"
+                    android:src="@drawable/content_discard"
+                    android:visibility="invisible" />
             </LinearLayout>
 
             <GridView
                 android:id="@+id/subcategory_gridview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/sentenceboardlayout"
                 android:gravity="center"
-                android:numColumns="1" >
-
+                android:background="@drawable/sentenceboardlayout"   
+                android:numColumns="1"
+                android:listSelector="@drawable/sentenceboardlayout" >
             </GridView>
         </LinearLayout>
 
@@ -167,7 +167,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/device_access_camera"
                     android:contentDescription="@string/picture"
-                    android:clickable="false"
+                    android:visibility="invisible"
                     android:onClick="gotoPictoCreator" />
 
                 <ImageButton
@@ -176,7 +176,8 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_new_picture"
                     android:contentDescription="@string/picture"
-                    android:clickable="false" />
+                    android:visibility="gone"
+                    android:onClick="createPictogram" />
 
                 <ImageButton
                     android:id="@+id/delete_selected_picture_button"
@@ -184,7 +185,8 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/content_discard"
                     android:contentDescription="@string/picture"
-                    android:clickable="false" />
+                    android:visibility="gone"
+                    android:onClick="deletePictogram" />
 
             </LinearLayout>
 
@@ -193,7 +195,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:numColumns="6"
-                android:background="@drawable/sentenceboardlayout" >
+                android:background="@drawable/sentenceboardlayout"
+                android:listSelector="@drawable/sentenceboardlayout" >
             </GridView>
         </LinearLayout>
     </LinearLayout>
@@ -208,7 +211,7 @@
             android:id="@+id/tip_error_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tip/Error messages"
+            android:text="Tryk i lang tid for yderligere options"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <ImageView
