--- a/source/workspace/PARROT/res/layout/speechboard_layout.xml
+++ b/source/workspace/PARROT/res/layout/speechboard_layout.xml
@@ -19,7 +19,6 @@
 			android:layout_height="match_parent"
 			android:gravity="center"
 			android:numColumns="1"
-			android:listSelector="@color/cell_empty" 
 			android:background="@drawable/sentenceboardlayout"
 			 />
 	
@@ -29,7 +28,6 @@
 			android:layout_height="match_parent"
 			android:gravity="center"
 			android:numColumns="1"
-			android:listSelector="@color/cell_empty"
 			android:background="@drawable/sentenceboardlayout"
 			android:visibility="visible" />
         
@@ -38,10 +36,9 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="match_parent"
 	        android:columnWidth="150dp"
-	        android:gravity="center"
-	        android:horizontalSpacing="5dp"
 	        android:numColumns="5"
-	        android:stretchMode="columnWidth"
+	        android:stretchMode="none"
+	        android:horizontalSpacing="5dp"
 	        android:verticalSpacing="5dp"
 	        android:background="@drawable/sentenceboardlayout" >
 		    </GridView>
