--- a/source/workspace/PARROT/res/layout/speechboard_layout.xml
+++ b/source/workspace/PARROT/res/layout/speechboard_layout.xml
@@ -40,7 +40,8 @@
 	        android:stretchMode="none"
 	        android:horizontalSpacing="5dp"
 	        android:verticalSpacing="5dp"
-	        android:background="@drawable/sentenceboardlayout" >
+	        android:background="@drawable/sentenceboardlayout"
+	        android:fastScrollEnabled="true"  >
 		    </GridView>
 
     </LinearLayout>
