--- a/source/workspace/PARROT/res/layout/pictogramview.xml
+++ b/source/workspace/PARROT/res/layout/pictogramview.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pictogramView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+   
+    
+    >
+    <!-- from ImageView android:listSelector="@color/cell_empty" -->>
     <ImageView
         android:id="@+id/pictogrambitmap"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:listSelector="@color/cell_empty"
         android:layout_marginBottom="3dp"/>
 
 
