--- a/source/workspace/PictoAdmin/res/layout/dialog_title.xml
+++ b/source/workspace/PictoAdmin/res/layout/dialog_title.xml
@@ -4,11 +4,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/titelEdit"
+    <GridView
+        android:id="@+id/iconGrid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
-        android:hint="Skriv ny titel" />
+        android:numColumns="3"
+        android:listSelector="@drawable/sentenceboardlayout" />
 
 </LinearLayout>
