--- a/source/workspace/PictoAdmin/res/layout/dialog_create.xml
+++ b/source/workspace/PictoAdmin/res/layout/dialog_create.xml
@@ -22,6 +22,6 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
         android:text="Farve"
-        android:onClick="onSentenceboardColorChanged"/>
+        android:onClick="setNewCategoryColor"/>
 
 </LinearLayout>
