--- a/source/workspace/DeveloperPictoadmin/res/menu/activity_admin_category.xml
+++ b/source/workspace/DeveloperPictoadmin/res/menu/activity_admin_category.xml
@@ -1,5 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
+    
+    <item
+        android:id="@+id/action_save"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Gem ændringer"
+        android:onClick="saveChanges">
+        </item>
+        
     <item
         android:id="@+id/action_back"
         android:orderInCategory="100"
