--- a/source/workspace/PARROT/res/layout/activity_setting.xml
+++ b/source/workspace/PARROT/res/layout/activity_setting.xml
@@ -1,82 +1,20 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/options_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="40dp"
-    tools:context=".SettingActivity" >
-
-    <LinearLayout
-        android:id="@+id/numberLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/sentenceSetting"
-          	android:textSize="40sp"
-			android:textColor="#ffffff"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/sentensboardOptions" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/changesentencecolor"
-
-                android:textSize="20sp"
-				android:textColor="#ffffff"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/changesentencecolor" />
-
-            <Button
-                android:id="@+id/buttonChangeSentenceColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:background="@drawable/button"
-                android:onClick="onSentenceboardColorChanged"
-                android:radius="7dp"
-                android:text="@string/buttonChangeColorSentence"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/alignChoseForNoInSentenceBoard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/pickNoSentenceBoard"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/SentenceboardNo"
-                android:textColor="#ffffff"
-                android:textSize="20sp" />
-
-
-            <Spinner
-                android:id="@+id/spinnerNoOfsentence"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp" />
-        </LinearLayout>
-
+    android:background="@drawable/optionsbackground"
+    android:layout_marginLeft="50dp"
+    android:orientation="vertical" 
+    >
+    
+       
         <TextView
             android:id="@+id/pictogramSetting"
             android:textSize="40sp"
 			android:textColor="#ffffff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="271dp"
             android:text="@string/pictogramOptions" />
 
         <RadioGroup
@@ -124,7 +62,73 @@
             android:text="@string/textToPic"
             android:textSize="20sp" />
 
+    
+    <LinearLayout
+        android:id="@+id/numberLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/sentenceSetting"
+          	android:textSize="40sp"
+			android:textColor="#ffffff"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/sentensboardOptions" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/changesentencecolor"
+
+                android:textSize="20sp"
+				android:textColor="#ffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/changesentencecolor" />
+
+            <Button
+                android:id="@+id/buttonChangeSentenceColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:background="@drawable/button"
+                android:onClick="onSentenceboardColorChanged"
+                android:radius="7dp"
+                android:text="@string/buttonChangeColorSentence"
+                android:textSize="20sp" />
+         </LinearLayout>
+         <LinearLayout
+            android:id="@+id/alignChoseForNoInSentenceBoard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+             >            
+            
+            <TextView
+                android:id="@+id/pickNoSentenceBoard"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/SentenceboardNo"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+
+
+            <Spinner
+                android:id="@+id/spinnerNoOfsentence"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp" />
+        </LinearLayout>
 
     </LinearLayout>
 
-</RelativeLayout>
+
+</LinearLayout>
