--- a/source/workspace/PARROT/res/menu/parrot_settings.xml
+++ b/source/workspace/PARROT/res/menu/parrot_settings.xml
@@ -18,5 +18,11 @@
         android:showAsAction="never"
         android:title="@string/clearSentenceBoard"
         />
+    <item
+        android:id="@+id/goToParrot"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/returnItem"
+        />
     
 </menu>
