--- a/source/workspace/PARROT/res/layout/activity_setting.xml
+++ b/source/workspace/PARROT/res/layout/activity_setting.xml
@@ -4,23 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/optionsbackground"
-    android:layout_marginLeft="50dp"
     android:orientation="vertical" 
     >
-    
-       
         <TextView
             android:id="@+id/pictogramSetting"
             android:textSize="40sp"
 			android:textColor="#ffffff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+       		android:layout_marginLeft="50dp"
             android:text="@string/pictogramOptions" />
 
         <RadioGroup
             android:id="@+id/radioGroupSizePictogram"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content"     
+       		android:layout_marginLeft="50dp"
             android:orientation="horizontal" >
 
             <TextView
@@ -54,10 +53,10 @@
 
         <CheckBox
 
-            android:id="@+id/checkBoxShowText"
+            android:id="@+id/checkBoxShowText"         
+    	   	android:layout_marginLeft="50dp"    
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
             android:onClick="onShowTextChanged"
             android:text="@string/textToPic"
             android:textSize="20sp" />
@@ -65,8 +64,9 @@
     
     <LinearLayout
         android:id="@+id/numberLayout"
+       	android:layout_marginLeft="50dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical" >
@@ -80,7 +80,7 @@
             android:text="@string/sentensboardOptions" />
 
         <LinearLayout
-            android:id="@+id/linearLayout1"
+            android:id="@+id/linearLayout1" 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
@@ -107,15 +107,16 @@
          </LinearLayout>
          <LinearLayout
             android:id="@+id/alignChoseForNoInSentenceBoard"
+            android:layout_marginTop="20dp" 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:orientation="horizontal"
              >            
             
             <TextView
                 android:id="@+id/pickNoSentenceBoard"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
                 android:text="@string/SentenceboardNo"
                 android:textColor="#ffffff"
                 android:textSize="20sp" />
@@ -123,12 +124,12 @@
 
             <Spinner
                 android:id="@+id/spinnerNoOfsentence"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp" />
+				android:layout_width="60dp"
+    			android:layout_height="60dp"
+    			android:layout_gravity="fill_vertical"
+    			android:layout_marginLeft="30dp" />
         </LinearLayout>
 
     </LinearLayout>
-
 
 </LinearLayout>
